Fix svg getting cut off on viewer resize

--- a/fem-viewer/src/App.css
+++ b/fem-viewer/src/App.css
@@ -1,12 +1,13 @@
 :root {
-	--border-color: rgb(0, 0, 0);
-	--black: rgb(119, 61, 61);
+	--border-color: rgb(92, 92, 92);
+	--black: rgb(95, 172, 208);
 	--bg-white: rgb(216, 216, 216);
 	--viewer-bg: rgb(255, 255, 255);
 	--tree-border-width: 8px;
 	--header-height: 50px;
-	--drag-handle-bg: rgb(143, 2, 2);
-	--drag-handle-active-bg: rgb(200, 2, 2);
+	--drag-handle-bg: rgb(34, 34, 34);
+	--drag-handle-active-bg: rgb(2, 127, 200);
+	--selected-bg: rgb(103, 200, 245);
 }
 
 .App {
